fixed button text wrapping!! need to change height property of button (line 964) to a percentage and change white-space to normal to enable wrapping and automatic resizing of button boundaries. wooooo it works! just need to check to see if fixed on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -953,7 +953,7 @@
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		background-color: transparent;
-		border-radius: 4px;
+		border-radius: 50px;
 		border: 0;
 		box-shadow: inset 0 0 0 1px #ffffff;
 		color: #ffffff !important;
@@ -961,15 +961,15 @@
 		display: inline-block;
 		font-size: 0.8rem;
 		font-weight: 300;
-		height: 2.75rem;
-		letter-spacing: 0.2rem;
+		height: 80%;
+		letter-spacing: 0.12rem;
 		line-height: 2.75rem;
 		outline: 0;
 		padding: 0 1.25rem 0 1.35rem;
 		text-align: center;
 		text-decoration: none;
 		text-transform: uppercase;
-		white-space: nowrap;
+		white-space: normal;
 	}
 
 		input[type="submit"]:hover,
